[gd_scene load_steps=3 format=3 uid="uid://dabhus5dqe8we"]

[ext_resource type="Script" path="res://game/scripts/main_menu_screen.gd" id="1_qiby7"]
[ext_resource type="Theme" uid="uid://bywqqu0lkvhdn" path="res://game/ui/ccm_theme.tres" id="1_x50sd"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_x50sd")
script = ExtResource("1_qiby7")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -213.5
offset_top = -31.5
offset_right = 213.5
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="StoryModeButton" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "GRAND STORY MODE"

[node name="CabaretClubModeButton" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "CABARET CLUB MODE"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="OnlineModeButton" type="Button" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "ONLINE MODE"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="ShopButton" type="Button" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "SHOP"

[node name="CustomisationModeButton" type="Button" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "CUSTOMISATION MODE"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/StoryModeButton" to="." method="_on_story_mode_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/CabaretClubModeButton" to="." method="_on_cabaret_club_mode_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/OnlineModeButton" to="." method="_on_online_mode_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/HBoxContainer/ShopButton" to="." method="_on_shop_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/HBoxContainer/CustomisationModeButton" to="." method="_on_customisation_mode_button_pressed"]
